made some changes to swagger.yaml and fixed bugs in routes
