# mechanicAPI/app/blueprints/customers/routes.py
@@ -2,52 +2,26 @@ from flask import request, jsonify
 from marshmallow import ValidationError
 from sqlalchemy import select, delete
 from . import customers_bp
-from .schemas import customers_schema, customer_schema, login_schema
+from .schemas import customer_schema, customers_schema
 from app.models import db, Customer
 from app.extensions import limiter, cache
 from app.utils.utils import encode_token, token_required
 
 
-# Customer endpoints
-# login endpoint
-
-
-@customers_bp.route("/login", methods=["POST"])
-@limiter.limit("3 per hour")
-def login():
-    try:
-        creds = login_schema.load(request.json)
-    except ValidationError as e:
-        return jsonify(e.messages), 400
-    
-    query = select(Customer).where(Customer.email == creds['email'])
-    customer = db.session.execute(query).scalars().first()
-    
-    if customer and customer.password == creds['password']:
-        token = encode_token(customer.id)
-        response = {
-            'status': 'success',
-            'message': 'Successfully Logged In.',
-            'token': token
-        }
-        return jsonify({'token': token}), 200
-
-
+# customer endpoints
 # Add customer
 @customers_bp.route("/", methods=["POST"])
-# @token_required
 @limiter.limit("3 per hour") # Added limiting because no need to add > 3 customers per hour
 def add_customer():
     try:
         customer_data = customer_schema.load(request.json)
     except ValidationError as e:
         return jsonify(e.messages), 400
-    
-    query = select(Customer).where(Customer.email == customer_data['email'])
-    existing_customer = db.session.execute(query).scalars().first()
-    
+
+    # use data to create an instance of customer
     new_customer = Customer(**customer_data)
 
+    # add the new customer to the session
     db.session.add(new_customer)
     db.session.commit()
 
@@ -55,8 +29,8 @@ def add_customer():
 
 
 # get all customers
-@customers_bp.route("/", methods=["GET"])
-@cache.cached(timeout=60)  # aded caching because assessing customers is a common operation
+@customers_bp.route('/', methods=['GET'])
+@cache.cached(timeout=60, query_string=True) # added caching because assessing customers is a common operation
 def get_customers():
     page = request.args.get('page', type=int)
     per_page = request.args.get('per_page', default=10, type=int)
@@ -77,66 +51,51 @@ def get_customers():
         
         return customers_schema.jsonify(customers), 200
 
-# get customer by id
-@customers_bp.route("/<int:id>", methods=["GET"])
-def get_customer(id):
-    query = select(Customer).where(Customer.id == id)
-    customer = db.session.execute(query).scalars().first()
-
-    if customer is None:
-        return jsonify({"message": "Invalid user ID"}), 404
-
-    return customer_schema.jsonify(customer), 200
-
 
 # update customer
-@customers_bp.route("/", methods=["PUT"])
-# @token_required
+@customers_bp.route("/<int:customer_id>", methods=["PUT"])
+@token_required
 @limiter.limit("3 per hour") # Added additional limiting because no need to update > 3 customers per hour
-def update_customer(id):
-    customer = db.session.get(Customer, id)
+def update_customer(customer_id):
+    customer = db.session.get(Customer, customer_id)
 
-
-    if customer is None:
-        return jsonify({"message": "Invalid user ID"}), 404
+    if not customer:
+        return jsonify({"error": "Invalid part description ID"}), 404
+    
     try:
         customer_data = customer_schema.load(request.json)
     except ValidationError as e:
         return jsonify(e.messages), 400
-
-    for field, value in customer_data.items():  # unpacks customer_data dictionary
-        setattr(
-            customer, field, value
-        )  # updates the values of the customer we queried out of the db
+    
+    for field, value in customer_data.items():
+        setattr(customer, field, value)
 
     db.session.commit()
     return customer_schema.jsonify(customer), 200
 
 
 # delete customer
-@customers_bp.route("/", methods=["DELETE"])
-# @token_required
+@customers_bp.route("/<int:customer_id>", methods=["DELETE"])
+@token_required
 def delete_customer(customer_id):
     customer = db.session.get(Customer, customer_id)
 
     if not customer:
-        return jsonify({"message": "Customer not found"}), 404
+        return jsonify({"message": "Invalid part id"}), 404
 
     db.session.delete(customer)
     db.session.commit()
-    return jsonify({"message": f"Successfully deleted customer"}), 200
+    return jsonify({"message": f"Successfully deleted customer {customer_id}"}), 200
 
-# Query parameter to search customer by email
-@customers_bp.route("/search", methods=["GET"])
-def search_customers():
-    email = request.args.get("email")
+@customers_bp.route("/search", methods=['GET'])
+def search_by_part_name():
+    name = request.args.get('name')
+    query = select(customer).where(customer.name.like(f"%{name}%"))
+    customer = db.session.execute(query.scalars().first())
     
-    query = select(Customer).where(Customer.email.like(f"%{email}%"))
-    customer = db.session.execute(query).scalars().first()
-
-    if not customer:
-        return jsonify({"message": "No customer found"}), 404
-
     return customer_schema.jsonify(customer), 200
+                            
+
+
 
 
